# energy_meter_dsz15d-3x80a

./: README.md  pyproject.toml
config/: energy-meter.example.toml
deploy/: energy-meter.service
docs/: hardware.md
src/energy_meter_dsz15d_3x80a/: __init__.py  __main__.py  config.py  database.py  gpio.py  service.py
tests/: test_config.py  test_service.py
